--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
   <!DOCTYPE html>
   <html>
       <head>
-          <title>4.4 Multiple Classes Independent Practice</title>
+          <title>4.4 Multiple Classes Independent Practices</title>
       <link rel="stylesheet" href="style.css">
       </head>
       <body>
